<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">sdk</string>
    <string name="audit_mode_warning_content">%1$s 该模式仅限内部人员测试使用，此功能可能会上报您的个人信息（包括但不限于IMEI）用于系统功能测试，请谨慎选择是否进入。</string>
    <string name="audit_mode_warning_title">注意</string>
    <string name="beauty3d_add_hint">Add 3D Face Beauty</string>
    <string name="beauty3d_beauty_face">3D Face Beauty</string>
    <string name="beauty3d_cancel">Cancel</string>
    <string name="beauty3d_cheekbones">Cheekbone</string>
    <string name="beauty3d_chin">Chin</string>
    <string name="beauty3d_continue_turn_to_left">Please continue turning your head left</string>
    <string name="beauty3d_continue_turn_to_right">Please continue turning your head right</string>
    <string name="beauty3d_customize_face">Custom Beautifying</string>
    <string name="beauty3d_customize_hint">Tap your facial features for minor adjustments</string>
    <string name="beauty3d_customize_success">Custom 3D Beautified Look Completed</string>
    <string name="beauty3d_delete">Delete</string>
    <string name="beauty3d_eye">Big Eyes</string>
    <string name="beauty3d_face_blurred">"Blurred face image. Please don't sway your head when recording"</string>
    <string name="beauty3d_face_change">Face has changed</string>
    <string name="beauty3d_face_closer">Please keep your face and the phone closer</string>
    <string name="beauty3d_face_edit_title">Facial Analysis</string>
    <string name="beauty3d_face_farther">Please keep your face and the phone farther</string>
    <string name="beauty3d_face_scan">Face Scan</string>
    <string name="beauty3d_face_size">Face Shape</string>
    <string name="beauty3d_face_style_delicate">Delicacy</string>
    <string name="beauty3d_face_style_lolita">Loli</string>
    <string name="beauty3d_face_style_mode">Model</string>
    <string name="beauty3d_face_style_natural">Natural</string>
    <string name="beauty3d_give_up_customize_face">Discard Custom 3D Beautified Look</string>
    <string name="beauty3d_goose_face">Oval Face</string>
    <string name="beauty3d_guide_content">Smart face scanning can easily 3D beautify your face</string>
    <string name="beauty3d_high_cheekbone">Higher</string>
    <string name="beauty3d_inconsistent_feature">Inconsistent facial features</string>
    <string name="beauty3d_keep_face_forward">Please align your front face with the frame</string>
    <string name="beauty3d_keep_face_in_cicle">Your face is out of the frame. Please keep your face inside it</string>
    <string name="beauty3d_keep_one_face">Please make sure only one face is inside the frame at a time</string>
    <string name="beauty3d_light_dim">The light is too dim. Please retry under normal lighting;</string>
    <string name="beauty3d_long_chin">Longer</string>
    <string name="beauty3d_long_face">Longer Face</string>
    <string name="beauty3d_narrow_nose">Narrower Nose</string>
    <string name="beauty3d_no_face">Face detection failed</string>
    <string name="beauty3d_no_face_exit">No face detected. Scanning ended</string>
    <string name="beauty3d_no_show_teeth">"Please don't show your teeth"</string>
    <string name="beauty3d_nose">Nose</string>
    <string name="beauty3d_orientatin_error_keep_vertical">Incorrect phone direction. Please keep it in the portrait mode</string>
    <string name="beauty3d_over_max_frame_exit">Maximum allowed number of frames exceeded. Scanning ended.</string>
    <string name="beauty3d_pelease_remove_glasses">Please remove your glasses</string>
    <string name="beauty3d_program_error_exit">Program error. Scanning ended.</string>
    <string name="beauty3d_rescan">Scan Again</string>
    <string name="beauty3d_rotate_head">Rotate your head slowly and maintain the same look throughout the process</string>
    <string name="beauty3d_round_face">Round Face</string>
    <string name="beauty3d_save">Save</string>
    <string name="beauty3d_save_face_failed">Failed to keep facial data</string>
    <string name="beauty3d_scan_content">Remove your glasses, and make sure your hair does not cover any part of your face. Place your front face inside the frame, and slowly rotate your head until scanning finishes.</string>
    <string name="beauty3d_short_chin">Shorter</string>
    <string name="beauty3d_skip">Skip</string>
    <string name="beauty3d_small_eye">Smaller Eyes</string>
    <string name="beauty3d_square_face">Square Face</string>
    <string name="beauty3d_standard_cheekbone">Standard</string>
    <string name="beauty3d_standard_chin">Standard</string>
    <string name="beauty3d_standard_eye">Standard Eyes</string>
    <string name="beauty3d_standard_nose">Standard Nose</string>
    <string name="beauty3d_start_scan">Scan Now</string>
    <string name="beauty3d_title">3D Face Beauty</string>
    <string name="beauty3d_turn_to_left">Please turn left</string>
    <string name="beauty3d_turn_to_right">Please turn right</string>
    <string name="beauty3d_turn_to_up">Please raise your head</string>
    <string name="beauty3d_wait_scan_complete">Creating 3D face. Keep facing the camera</string>
    <string name="beauty3d_width_nose">Wider Nose</string>
    <string name="blur_thumb_text">Bokeh %d%%</string>
    <string name="byteShort"> B</string>
    <string name="byteSpeed"> B/s</string>
    <string name="camera_ai_scene_default_value">on</string>
    <string name="camera_ai_scene_first_hint">Tap to remove effect</string>
    <string name="camera_ai_scene_title">AI Scene Recognition</string>
    <string name="camera_ai_scn_backlight">Backlight</string>
    <string name="camera_ai_scn_beach">Beach</string>
    <string name="camera_ai_scn_bluesky">Blue Sky</string>
    <string name="camera_ai_scn_cat">Kitty</string>
    <string name="camera_ai_scn_dog">Puppy</string>
    <string name="camera_ai_scn_firework">Fireworks</string>
    <string name="camera_ai_scn_flower">Bouquet</string>
    <string name="camera_ai_scn_gourmet">Food</string>
    <string name="camera_ai_scn_grass">Grass</string>
    <string name="camera_ai_scn_indoor">Indoor</string>
    <string name="camera_ai_scn_infant">Infant</string>
    <string name="camera_ai_scn_landscape">Scene</string>
    <string name="camera_ai_scn_microspur">Macro Lens</string>
    <string name="camera_ai_scn_moire">Moire</string>
    <string name="camera_ai_scn_multi_portrait">Group Photo</string>
    <string name="camera_ai_scn_night">Night</string>
    <string name="camera_ai_scn_night_capture_tips">SLOW ULTRA-HIGH RESOLUTION SHOOTING</string>
    <string name="camera_ai_scn_plant">Green Plants</string>
    <string name="camera_ai_scn_portrait">Portrait</string>
    <string name="camera_ai_scn_purecolor">Solid Color</string>
    <string name="camera_ai_scn_snow">Snow</string>
    <string name="camera_ai_scn_spotlight">Spotlight</string>
    <string name="camera_ai_scn_sunset">Sunrise &amp; Sunset</string>
    <string name="camera_ai_scn_text">Text</string>
    <string name="camera_app_name">Camera</string>
    <string name="camera_assistant_line_default_value">off</string>
    <string name="camera_assistant_line_title">Grid</string>
    <string name="camera_beauty_custom_3d">3D</string>
    <string name="camera_beauty_custom_big_eye">Bigger Eyes</string>
    <string name="camera_beauty_custom_chin">Chin</string>
    <string name="camera_beauty_custom_exfoliating">Smoothen</string>
    <string name="camera_beauty_custom_little_face">Smaller Face</string>
    <string name="camera_beauty_custom_makeup">Touch up</string>
    <string name="camera_beauty_custom_thin_face">Thinner Face</string>
    <string name="camera_beauty_custom_thin_nasal">Smaller Nose</string>
    <string name="camera_blur_title">Blur</string>
    <string name="camera_bokeh_camera_occlusion">"Don't block the camera lens"</string>
    <string name="camera_bokeh_move_closer">Move closer</string>
    <string name="camera_bokeh_move_farther_away">Move further away</string>
    <string name="camera_bokeh_need_more_light">More light required</string>
    <string name="camera_bokeh_place_subject_not_found">Place subject within 2 meters</string>
    <string name="camera_bokeh_single">"This lighting effect doesn't support group photos"</string>
    <string name="camera_bubble_short_video">Hold down to take video</string>
    <string name="camera_bubble_sticker">Use Stickers</string>
    <string name="camera_button_ok">OK</string>
    <string name="camera_camera_error_title">Camera Error. Unable to Connect.</string>
    <string name="camera_dark_environment_open_flash_toast">Low ambient light. Turn on flash for a clearer image.</string>
    <string name="camera_description_arrow_left_to_right">Right Arrow</string>
    <string name="camera_description_arrow_right_to_left">Left Arrow</string>
    <string name="camera_description_common_shutter_button">\"Shutter\" button</string>
    <string name="camera_description_current_video_thumbnail">Latest Videos</string>
    <string name="camera_description_effect_menu_popup">Pop Up the Effect Menu</string>
    <string name="camera_description_face_beauty_menu_popup">Pop Up the Face Beauty Menu</string>
    <string name="camera_description_front_camera">Front Camera</string>
    <string name="camera_description_google_lens_menu_popup">Google Lens</string>
    <string name="camera_description_high_resolution">Ultra HD</string>
    <string name="camera_video_first_sound_prompt">Multiple Sound Effects for Videos</string>
    <string name="camera_video_focusing_sound">Sound Focus</string>
    <string name="camera_video_focusing_sound_prompt">Follows the subject so desired sounds are captured</string>
    <string name="camera_video_normal_sound">Standard</string>
    <string name="camera_video_normal_sound_prompt">Clear Original Recording</string>
    <string name="camera_video_panorama_sound">3D Recorder</string>
    <string name="camera_video_panorama_sound_prompt">Shoot with horizontal screen to capture richer sound and live performance feel</string>
    <string name="camera_video_second_sound_prompt">Avoid blocking the microphone during video recording for better audio</string>
    <string name="camera_video_sound_confirm_prompt">OK</string>
</resources>