<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/video_sound_guidance_dialog_background_alpha" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/video_sound_title_textsize" android:textColor="@color/video_sound_guidance_dialog_text_white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/video_sound_title" android:layout_width="@dimen/video_sound_title_layout_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_title_margin_top" android:text="@string/camera_video_first_sound_prompt" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="@dimen/video_sound_prompt_textsize" android:textColor="@color/video_sound_guidance_dialog_text_middile_alpha" android:layout_gravity="center_horizontal" android:id="@id/video_sound_prompt" android:layout_width="@dimen/video_sound_prompt_layout_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_prompt_margin_top" android:text="@string/camera_video_second_sound_prompt" android:singleLine="false" android:lineSpacingExtra="@dimen/video_sound_prompt_linespacing" android:fontFamily="sans-serif" />
    <RelativeLayout android:layout_width="@dimen/video_sound_relative_layout_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_normal_relative_margin_top" android:paddingStart="@dimen/video_sound_relative_layout_padding_start" android:paddingEnd="@dimen/video_sound_relative_layout_padding_end">
        <ImageView android:id="@id/video_image_normal" android:layout_width="@dimen/video_image_layout_width" android:layout_height="@dimen/video_image_layout_height" android:layout_marginTop="@dimen/video_image_margin_top" android:src="@drawable/ic_tips_voice_regular" />
        <TextView android:textSize="@dimen/video_sound_text_textsize" android:textColor="@color/video_sound_guidance_dialog_text_white" android:layout_width="@dimen/video_sound_text_layout_width" android:layout_height="@dimen/video_sound_text_layout_height" android:text="@string/camera_video_normal_sound" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/video_sound_text_margin_start" android:layout_toEndOf="@id/video_image_normal" />
        <TextView android:textSize="@dimen/video_sound_text_content_textsize" android:textColor="@color/video_sound_guidance_dialog_text_middile_alpha" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_text_content_margin_top" android:text="@string/camera_video_normal_sound_prompt" android:singleLine="false" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/video_sound_text_content_margin_start" android:layout_toEndOf="@id/video_image_normal" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="@dimen/video_sound_relative_layout_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_panorama_relative_margin_top" android:paddingStart="@dimen/video_sound_relative_layout_padding_start" android:paddingEnd="@dimen/video_sound_relative_layout_padding_end">
        <ImageView android:id="@id/video_image_panorama" android:layout_width="@dimen/video_image_layout_width" android:layout_height="@dimen/video_image_layout_height" android:layout_marginTop="@dimen/video_image_margin_top" android:src="@drawable/ic_tips_voice_3d" />
        <TextView android:textSize="@dimen/video_sound_text_textsize" android:textColor="@color/video_sound_guidance_dialog_text_white" android:layout_width="@dimen/video_sound_text_layout_width" android:layout_height="@dimen/video_sound_text_layout_height" android:text="@string/camera_video_panorama_sound" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/video_sound_text_margin_start" android:layout_toEndOf="@id/video_image_panorama" />
        <TextView android:textSize="@dimen/video_sound_text_content_textsize" android:textColor="@color/video_sound_guidance_dialog_text_middile_alpha" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_text_content_margin_top" android:text="@string/camera_video_panorama_sound_prompt" android:singleLine="false" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/video_sound_text_content_margin_start" android:layout_toEndOf="@id/video_image_panorama" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="@dimen/video_sound_relative_layout_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_focusing_relative_margin_top" android:paddingStart="@dimen/video_sound_relative_layout_padding_start" android:paddingEnd="@dimen/video_sound_relative_layout_padding_end">
        <ImageView android:id="@id/video_image_focusing" android:layout_width="@dimen/video_image_layout_width" android:layout_height="@dimen/video_image_layout_height" android:layout_marginTop="@dimen/video_image_margin_top" android:src="@drawable/ic_tips_voice_zoom" />
        <TextView android:textSize="@dimen/video_sound_text_textsize" android:textColor="@color/video_sound_guidance_dialog_text_white" android:layout_width="@dimen/video_sound_text_layout_width" android:layout_height="@dimen/video_sound_text_layout_height" android:text="@string/camera_video_focusing_sound" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/video_sound_text_margin_start" android:layout_toEndOf="@id/video_image_focusing" />
        <TextView android:textSize="@dimen/video_sound_text_content_textsize" android:textColor="@color/video_sound_guidance_dialog_text_middile_alpha" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_sound_text_content_margin_top" android:text="@string/camera_video_focusing_sound_prompt" android:singleLine="false" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/video_sound_text_content_margin_start" android:layout_toEndOf="@id/video_image_focusing" />
    </RelativeLayout>
    <Button android:textSize="@dimen/video_sound_confirm_textsize" android:textColor="@color/video_sound_guidance_dialog_text_white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/video_sound_confirm" android:background="@drawable/video_sound_confirm_btn_bg" android:layout_width="@dimen/video_sound_confirm_layout_width" android:layout_height="@dimen/video_sound_confirm_layout_height" android:layout_marginTop="@dimen/video_sound_confirm_margin_top" android:text="@string/camera_video_sound_confirm_prompt" android:fontFamily="sans-serif-medium" />
</LinearLayout>